feat: Implement `expirationDate` and `expirationExtensionAfterThaw` for stock items, and add inventory management tools for Gemini.

--- a/ui/pantry-ui/src/app/product-view/product-view.component.html
+++ b/ui/pantry-ui/src/app/product-view/product-view.component.html
@@ -1,103 +1,105 @@
 <div *ngIf="product">
-<h1>{{product.title}}</h1>
-<a *ngIf="product" mat-raised-button href="/products/{{product.id}}/stock-items">Add Stock</a>
-<a *ngIf="product" mat-raised-button href="/products/{{product.id}}/edit">Edit Product</a>
-<div class="row">
-    <div class="col-sm-8">
-        <table mat-table [dataSource]="product.stockItems">
-            <ng-container matColumnDef="quantity">
-                <th mat-header-cell *matHeaderCellDef>Quantity</th>
-                <td mat-cell *matCellDef="let row">
-                    {{row.quantity}}
-                    <span *ngIf="row.isOpened" class="badge text-bg-primary">Open</span>
-                    <span *ngIf="row.isFrozen" class="badge text-bg-info">Frozen</span>
-                </td>
-            </ng-container>
-            <ng-container matColumnDef="expiration">
-                <th mat-header-cell *matHeaderCellDef>Expiration</th>
-                <td mat-cell *matCellDef="let row">{{row.expiration | date}}</td>
-            </ng-container>
-            <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let row">
-                    <button mat-raised-button (click)="UseStock(row, 1)">
-                        Use 1
-                        <mat-spinner style="display: inline-block;" diameter="20" *ngIf="row.loading_use"></mat-spinner>
-                    </button>
-                    <button mat-icon-button [matMenuTriggerFor]="stockItemEdit">
-                        <mat-icon>more_vert</mat-icon>
-                    </button>
-                    <mat-menu #stockItemEdit="matMenu">
-                        <a mat-menu-item href="/products/{{product.id}}/stock-items/{{row.id}}">
-                            <mat-icon>edit</mat-icon>
-                            Edit
-                        </a>
-                        <button (click)="setFrozen(row, true)" *ngIf="row.isFrozen != true" mat-menu-item>
-                            <mat-icon>ac_unit</mat-icon>
-                            Freeze
-                            @if(product.freezerLifespanDays !== null)
-                            {
+    <h1>{{product.title}}</h1>
+    <a *ngIf="product" mat-raised-button href="/products/{{product.id}}/stock-items">Add Stock</a>
+    <a *ngIf="product" mat-raised-button href="/products/{{product.id}}/edit">Edit Product</a>
+    <div class="row">
+        <div class="col-sm-8">
+            <table mat-table [dataSource]="product.stockItems">
+                <ng-container matColumnDef="quantity">
+                    <th mat-header-cell *matHeaderCellDef>Quantity</th>
+                    <td mat-cell *matCellDef="let row">
+                        {{row.quantity}}
+                        <span *ngIf="row.isOpened" class="badge text-bg-primary">Open</span>
+                        <span *ngIf="row.isFrozen" class="badge text-bg-info">Frozen</span>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="expiration">
+                    <th mat-header-cell *matHeaderCellDef>Expiration</th>
+                    <td mat-cell *matCellDef="let row">{{row.expirationDate | date}}</td>
+                </ng-container>
+                <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let row">
+                        <button mat-raised-button (click)="UseStock(row, 1)">
+                            Use 1
+                            <mat-spinner style="display: inline-block;" diameter="20"
+                                *ngIf="row.loading_use"></mat-spinner>
+                        </button>
+                        <button mat-icon-button [matMenuTriggerFor]="stockItemEdit">
+                            <mat-icon>more_vert</mat-icon>
+                        </button>
+                        <mat-menu #stockItemEdit="matMenu">
+                            <a mat-menu-item href="/products/{{product.id}}/stock-items/{{row.id}}">
+                                <mat-icon>edit</mat-icon>
+                                Edit
+                            </a>
+                            <button (click)="setFrozen(row, true)" *ngIf="row.isFrozen != true" mat-menu-item>
+                                <mat-icon>ac_unit</mat-icon>
+                                Freeze
+                                @if(product.freezerLifespanDays !== null)
+                                {
                                 <small>(expire in {{product.freezerLifespanDays}} days)</small>
-                            }
-                            @else
-                            {
+                                }
+                                @else
+                                {
                                 <small>(don't change expiration)</small>
-                            }
-                        </button>
-                        <button (click)="setFrozen(row, false)" *ngIf="row.isFrozen" mat-menu-item>
-                            <mat-icon>thermometer_gain</mat-icon>
-                            Remove from Freezer
-                            @if(row.expirationExtensionAfterThaw !== null)
-                            {
+                                }
+                            </button>
+                            <button (click)="setFrozen(row, false)" *ngIf="row.isFrozen" mat-menu-item>
+                                <mat-icon>thermometer_gain</mat-icon>
+                                Remove from Freezer
+                                @if(row.expirationExtensionAfterThaw !== null)
+                                {
                                 <small>(expire in {{row.expirationExtensionAfterThaw}} days)</small>
-                            }
-                            @else
-                            {
+                                }
+                                @else
+                                {
                                 <small>(don't change expiration)</small>
-                            }
-                        </button>
-                        <button (click)="setOpened(row)" *ngIf="row.isOpened != true" mat-menu-item>
-                            <mat-icon>orders</mat-icon>
-                            Open
-                            @if(row.isFrozen !== true && product.openedLifespanDays !== null)
-                            {
+                                }
+                            </button>
+                            <button (click)="setOpened(row)" *ngIf="row.isOpened != true" mat-menu-item>
+                                <mat-icon>orders</mat-icon>
+                                Open
+                                @if(row.isFrozen !== true && product.openedLifespanDays !== null)
+                                {
                                 <small>(expire in {{product.openedLifespanDays}} days)</small>
-                            }
-                            @else if(row.isFrozen === true && product.openedLifespanDays !== null)
-                            {
+                                }
+                                @else if(row.isFrozen === true && product.openedLifespanDays !== null)
+                                {
                                 <small>(expire in {{product.openedLifespanDays}} days if thawed)</small>
-                            }
-                            @else
-                            {
+                                }
+                                @else
+                                {
                                 <small>(don't change expiration)</small>
-                            }
-                        </button>
-                        <mat-divider></mat-divider>
-                        <button mat-menu-item>
-                            <mat-icon>print</mat-icon>
-                            Print Stock Label
-                        </button>
-                    </mat-menu>
-                </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="['quantity', 'expiration', 'actions']"></tr>
-            <tr mat-row *matRowDef="let row; columns: ['quantity', 'expiration', 'actions']" [class.active]="row.id == stockId"></tr>
-        </table>
+                                }
+                            </button>
+                            <mat-divider></mat-divider>
+                            <button mat-menu-item>
+                                <mat-icon>print</mat-icon>
+                                Print Stock Label
+                            </button>
+                        </mat-menu>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="['quantity', 'expiration', 'actions']"></tr>
+                <tr mat-row *matRowDef="let row; columns: ['quantity', 'expiration', 'actions']"
+                    [class.active]="row.id == stockId"></tr>
+            </table>
+        </div>
+        <div class="col-sm-4">
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title>
+                        Barcodes
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <div *ngFor="let barcode of product.barcodes">
+                        {{barcode.barcode}}
+                    </div>
+                </mat-card-content>
+
+            </mat-card>
+        </div>
     </div>
-    <div class="col-sm-4">
-        <mat-card>
-            <mat-card-header>
-                <mat-card-title>
-                    Barcodes
-                </mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-                <div *ngFor="let barcode of product.barcodes">
-                    {{barcode.barcode}}
-                </div>
-            </mat-card-content>
-    
-        </mat-card>
-    </div>
-</div>
 </div>
