fix frozen/open flags

--- a/ui/pantry-ui/src/app/stock-edit/stock-edit.component.html
+++ b/ui/pantry-ui/src/app/stock-edit/stock-edit.component.html
@@ -15,12 +15,12 @@
     </div>
     <div class="row">
         <div class="col-sm-4">
-            <mat-checkbox name="isOpen" [(ngModel)]="stockItem.isOpened">
+            <mat-checkbox name="isOpen" [(ngModel)]="stockItem.opened">
                 Is Opened
             </mat-checkbox>
         </div>
         <div class="col-sm-4">
-            <mat-checkbox name="isFrozen" [(ngModel)]="stockItem.isFrozen">
+            <mat-checkbox name="isFrozen" [(ngModel)]="stockItem.frozen">
                 Is Frozen
             </mat-checkbox>
         </div>
