--- a/ui/pantry-ui/src/app/product-view/product-view.component.html
+++ b/ui/pantry-ui/src/app/product-view/product-view.component.html
@@ -9,8 +9,8 @@
                     <th mat-header-cell *matHeaderCellDef>Quantity</th>
                     <td mat-cell *matCellDef="let row">
                         {{row.quantity}}
-                        <span *ngIf="row.isOpened" class="badge text-bg-primary">Open</span>
-                        <span *ngIf="row.isFrozen" class="badge text-bg-info">Frozen</span>
+                        <span *ngIf="row.opened" class="badge text-bg-primary">Open</span>
+                        <span *ngIf="row.frozen" class="badge text-bg-info">Frozen</span>
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="expiration">
@@ -33,7 +33,7 @@
                                 <mat-icon>edit</mat-icon>
                                 Edit
                             </a>
-                            <button (click)="setFrozen(row, true)" *ngIf="row.isFrozen != true" mat-menu-item>
+                            <button (click)="setFrozen(row, true)" *ngIf="row.frozen != true" mat-menu-item>
                                 <mat-icon>ac_unit</mat-icon>
                                 Freeze
                                 @if(product.freezerLifespanDays !== null)
@@ -45,7 +45,7 @@
                                 <small>(don't change expiration)</small>
                                 }
                             </button>
-                            <button (click)="setFrozen(row, false)" *ngIf="row.isFrozen" mat-menu-item>
+                            <button (click)="setFrozen(row, false)" *ngIf="row.frozen" mat-menu-item>
                                 <mat-icon>thermometer_gain</mat-icon>
                                 Remove from Freezer
                                 @if(row.expirationExtensionAfterThaw !== null)
@@ -57,14 +57,14 @@
                                 <small>(don't change expiration)</small>
                                 }
                             </button>
-                            <button (click)="setOpened(row)" *ngIf="row.isOpened != true" mat-menu-item>
+                            <button (click)="setOpened(row)" *ngIf="row.opened != true" mat-menu-item>
                                 <mat-icon>orders</mat-icon>
                                 Open
-                                @if(row.isFrozen !== true && product.openedLifespanDays !== null)
+                                @if(row.frozen !== true && product.openedLifespanDays !== null)
                                 {
                                 <small>(expire in {{product.openedLifespanDays}} days)</small>
                                 }
-                                @else if(row.isFrozen === true && product.openedLifespanDays !== null)
+                                @else if(row.frozen === true && product.openedLifespanDays !== null)
                                 {
                                 <small>(expire in {{product.openedLifespanDays}} days if thawed)</small>
                                 }
