--- a/ui/pantry-ui/src/app/side-menu/side-menu.component.html
+++ b/ui/pantry-ui/src/app/side-menu/side-menu.component.html
@@ -1,6 +1,8 @@
 <mat-nav-list>
     <a mat-list-item [routerLink]="['/']" (click)="onLinkClick()">Home</a>
+
     <a mat-list-item [routerLink]="['/recipes']" (click)="onLinkClick()">Recipes</a>
+    <a mat-list-item [routerLink]="['/shopping-list']" (click)="onLinkClick()">Shopping List</a>
     <a mat-list-item [routerLink]="['/settings/tags']" (click)="onLinkClick()">Tag Editor</a>
     <a mat-list-item [routerLink]="['/barcode/scanner']" (click)="onLinkClick()">Barcode Scanner</a>
     <a mat-list-item [routerLink]="['/search']" (click)="onLinkClick()">Search</a>
