--- a/ui/pantry-ui/src/app/product-view/product-view.component.html
+++ b/ui/pantry-ui/src/app/product-view/product-view.component.html
@@ -102,4 +102,8 @@
             </mat-card>
         </div>
     </div>
+
+    <button mat-fab class="audio-chat-fab" color="accent" (click)="openAudioChat()">
+        <mat-icon>smart_toy</mat-icon>
+    </button>
 </div>
