--- a/ui/pantry-ui/src/app/product-view/product-view.component.scss
+++ b/ui/pantry-ui/src/app/product-view/product-view.component.scss
@@ -1,3 +1,10 @@
 tr.active {
     background-color: var(--bs-tertiary-bg);
 }
+
+.audio-chat-fab {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    z-index: 1000;
+}
