--- a/ui/pantry-ui/src/app/shopping-list/shopping-list.component.html
+++ b/ui/pantry-ui/src/app/shopping-list/shopping-list.component.html
@@ -11,7 +11,16 @@
         </mat-form-field>
     </div>
 
-    <mat-list *ngIf="shoppingList">
+    <div *ngIf="isLoading" class="state-message">
+        <p>Loading shopping list...</p>
+    </div>
+
+    <div *ngIf="error" class="error-message">
+        <p>{{ error }}</p>
+        <button mat-button (click)="loadList()">Retry</button>
+    </div>
+
+    <mat-list *ngIf="!isLoading && !error && shoppingList">
         <mat-list-item *ngFor="let item of shoppingList.items">
             <span matListItemTitle [class.checked]="item.checked">{{ item.name }}</span>
             <span matListItemLine *ngIf="item.quantity > 1">Quantity: {{ item.quantity }}</span>
